@@ -1,6 +1,7 @@
 v.1.1.5
 	Adding Timestamp as an automatic date and time field.
-	Change (again) the business logic of adding js and css files. This is really useful for a future feature with multiple tables in the same view.
+	Change the business logic of adding js and css files. This is really useful for a future feature with multiple tables in the same view.
+	A temporary solution for the search for All that have a relation_n_n.
 v.1.1.4
 	Bug Fix - When you have unset edit and unset delete in your actions and also you have insert one or more add_action, the column Actions disapeared.
 	Adding a new field type named "password". This is a simple transformation of the field input from text to password and it hides the password from the list grid.
